修改配置文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,16 @@ shiro.filterChainDefinitions=/druid/**=anon;/404=anon;/500=anon;/login=anon;/log
 
 #freemarker
 spring.freemarker.suffix=.ftl
+#配置freemarker的内容编码
+spring.freemarker.charset=UTF-8
+#配置视图的输出HTML的contentType
+spring.freemarker.content-type=text/html;charset=UTF-8
+#配置freemarker的文件编码
+spring.freemarker.default_encoding=UTF-8
+#是否在model自动把session中的attribute导入进去
+spring.freemarker.expose-session-attributes=true
+spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/static/,classpath:/static/,classpath:/public
+
 
 #logback
 logback.path=logs
